smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/metadata-with-byte-string-key.smithy
// Syntax error at line 2, column 10: Expected one of IDENTIFIER, STRING('"'); but found BYTE_STRING('b"foo"') | Model
metadata b"foo" = "baz"
